Solved (partially) item alignment in main page

--- a/style.css
+++ b/style.css
@@ -446,6 +446,7 @@ flex-basis: 20%;
     flex-direction: column;
     height: 40%;
     width: 70%;
+    margin-left: 10px;
 }
 
 .text-area-wrapper{
